# aymidi

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  midi.md
files/: aymidi.ins  vmpk-aymidi.conf
resources/: aymidi.ins
src/: AyMidiPlugin.cpp  CMakeLists.txt  Channel.cpp  Channel.hpp  DistrhoPluginInfo.h  MidiChannel.cpp  MidiChannel.hpp  Note.cpp  Note.hpp  SoundGenerator.cpp  SoundGenerator.hpp  SynthEngine.cpp  SynthEngine.hpp  Voice.cpp  Voice.hpp  VoiceProcessor.cpp  VoiceProcessor.hpp  ayumi.c  ayumi.h  types.hpp
